--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,14 @@
 body {
     font-family: Arial;
 }
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+ul li {
+    margin: 0;
+}
 .header {
     width: 100%;
     background-color: #2ddf5c;
@@ -119,6 +127,9 @@ h1,h2,h3 {
     width: 200px;
     border-radius: 10px;
     transition: 0.3s;
+    font: inherit;
+    font-weight: bold;
+    cursor: pointer;
 }
 .plans__btn:hover {
     color: red;
@@ -140,4 +151,58 @@ h1,h2,h3 {
 }
 .plans__price-highlighted .plan__price {
     color: #5d5d5d;
+}
+/** features section **/
+.features {
+    background: #ff1b68;
+    margin-top: 80px;
+    padding: 16px;
+
+}
+.features .plans__title {
+    color: white;
+}
+.features__item {
+    width: 30%;
+    display: inline-block;
+}
+.features__img {
+    background: #ffcede;
+    width: 128px;
+    height: 128px;
+    border-radius: 50%;
+    border: 2px solid #424242;
+    margin: auto;
+    margin-bottom: 30px;
+}
+.features__description {
+    text-align: center;
+    font-weight: bold;
+    color: white;
+    font-size: 20px;
+}
+/** features section **/
+.footer__nav {
+    width: 100%;
+}
+.footer {
+    padding: 40px;
+    background: #000;
+}
+.footer__list {
+    text-align: center;
+}
+.footer__item {
+    width: 30%;
+    display: inline-block;
+}
+.footer__link {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    transition: 1s;
+}
+.footer__link:hover,
+.footer__link:active {
+    color: #ccc;
 }
