practice on positioning

--- a/css/shared.css
+++ b/css/shared.css
@@ -19,6 +19,9 @@ ul li {
 }
 .header {
     width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
     background-color: #2ddf5c;
     padding: 8px 16px;
 }
