--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
+/** title *** */
+.header-logo .header-logo__title {
+    text-align: left;
+    color: #fff;
+    position: absolute;
+    top:  15%;
+    left: 10%;
+}
 /** plans section **/
 .plans__item {
     text-align: center;
