layout been changed to flexbox

--- a/packages/css/packages.css
+++ b/packages/css/packages.css
@@ -1,99 +1,10 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-body {
-    font-family: 'Montserrat', sans-serif;
-}
-ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-ul li {
-    margin: 0;
-}
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-.header {
-    width: 100%;
-    background-color: #2ddf5c;
-    position: fixed;
-    z-index: 1;
-    padding: 8px 16px;
-}
-.logo__brand {
-    text-decoration: none;
-    color: #0e4f1f;
-    font-weight: bold;
-    font-size: 18px;
-}
-.logo {
-    display: inline-block;
-    vertical-align: middle;
-}
-.header-logo__title {
-    margin: 0;
-    text-align: center;
-}
-.header-logo {
-    background: url("freedom.jpeg") no-repeat;
-    background-size: cover;
-    height: 817px;
-}
-.nav {
-    display: inline-block;
-    width: calc(100% - 70px);
-    text-align: right;
-    vertical-align: middle;
-}
-.nav__list {
-    list-style: none;
-    display: inline-block;
-}
-.nav__items {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-}
-.nav__links {
-    text-decoration: none;
-    padding: 10px 0;
-    margin: 0 10px;
-    color: rgb(112, 106, 108);
-    font-weight: bold;
-}
-.nav__links:hover,
-.nav__links:active {
-    color: white;
-    border-bottom: 1px solid rgb(212, 220, 221);
-}
-.nav__items--cta a {
-    color: white;
-    background: red;
-    padding: 8px 16px;
-    border-radius: 8px;
-    transition: 0.3s;
-}
-.nav__items--cta a:hover {
-    color: red;
-    background: white;
-    border: none;
-}
-
-/** main styles **/
-
 
 /** footer section **/
 .footer__nav {
     width: 100%;
 }
 .footer {
-    padding: 40px;
+    padding: 2.5rem;
     background: #000;
 }
 .footer__list {
@@ -113,23 +24,26 @@ ul li {
 .footer__link:active {
     color: #ccc;
 }
-.main {
-    padding: 32px 0;
+.background {
+    padding: 2rem 0;
+    filter: grayscale(40%);
     background: url(../../img/bgImg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    /*position: fixed;*/
-    height: 100%;
-    width: 100%;
+    position: fixed;
+    height: 100vh;
+    width: 99vw;
+    z-index: -10;
 }
+
 /*** Plans section ***/
 .plans {
     width: 80%;
     display: inline-block;
     text-align: left;
     border: 2px solid #3b6c21;
-    padding: 50px;
-    margin: 15px 0;
+    padding: 3.1rem;
+    margin: 0.9rem 0;
     position: relative;
 }
 .plans a {
@@ -137,7 +51,7 @@ ul li {
     text-decoration: none;
 }
 .plans__badge {
-    padding: 5px 30px;
+    padding: 0.3rem 1.8rem;
     background: #239d63;
     color: white;
     position: absolute;
@@ -146,8 +60,8 @@ ul li {
     top: 20px;
 }
 .plans__titles {
-    padding: 15px 0;
-    font-size: 32px;
+    padding: .9rem 0;
+    font-size: 2rem;
     font-weight: bold;
 }
 .plans__subtitle {
@@ -155,23 +69,20 @@ ul li {
     padding: 0 0 15px 0;
 }
 .plans__txt {
-    padding: 15px;
+    padding: .9rem;
     border: 1px solid #2f8845;
     background: #fff;
     font-weight: bold;
 }
 .plans--plus {
     background: #93e09b;
-    border-left: none;
 }
 .plans--free {
     background: #94c998;
     float: right;
-    border-right: none;
 }
 .plans--premium {
     background: #117040;
-    border-left: none;
 }
 .plans--plus .plans__subtitle {
     color: #888;
