--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-/** title *** */
+/** header *** */
 .header-logo .header-logo__title {
     text-align: left;
     color: #fff;
@@ -9,14 +9,17 @@
 /** plans section **/
 .plans__item {
     text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 .plans__price {
     background: #5dffdc;
     text-align: center;
-    padding: 16px;
-    margin: 8px;
+    padding: 1rem;
+    /* margin: .5rem; */
     display: inline-block;
-    width: 30%;
+    width: 100%;
     vertical-align: middle;
 }
 .plans__title {
@@ -26,26 +29,28 @@
 .plans__price-highlighted {
     background: #19b84c;
     color: white;
-    box-shadow: 2px 2px 2px 2px rgba(0,0,0, 0.2);
+    /* box-shadow: 2px 2px 2px 2px rgba(0,0,0, 0.2); */
 }
 .plans__annotation {
     background: #fff;
+    /* width: 50%;
+    margin: 0 auto; */
     color: #19b84c;
-    padding: 8px;
-    box-shadow: 2px 2px 2px 2px rgba(0,0,0, 0.2);
+    padding: .5rem;
+    /* box-shadow: 2px 2px 2px 2px rgba(0,0,0, 0.2); */
     border-radius: 10px;
 }
 .plans__item {
     list-style: none;
-    padding: 5px;
+    padding: .4rem;
     margin: 0;
 }
 .plans__btn {
     background: #0e4f1f;
     color: white;
     border: none;
-    padding: 15px 25px;
-    margin-top: 15px;
+    padding: .9rem 1.5rem;
+    margin-top: .9rem;
     width: 200px;
     border-radius: 10px;
     transition: 0.3s;
@@ -65,9 +70,6 @@
 .plan__price {
     color: #9e9e9e;
 }
-.plans__price-highlighted {
-    width: 20%;
-}
 .plans__price-highlighted .plan__title {
     color: #fff;
 }
@@ -77,17 +79,17 @@
 /** features section **/
 .features {
     background: #ff1b68;
-    margin-top: 80px;
-    padding: 16px;
+    margin-top: 5rem;
+    padding: 1rem;
 
 }
 .features .plans__title {
     color: white;
 }
-.features__item {
-    width: 30%;
+/* .features__item {
+    width: 33%;
     display: inline-block;
-}
+} */
 .features__img {
     background: #ffcede;
     width: 128px;
@@ -95,11 +97,12 @@
     border-radius: 50%;
     border: 2px solid #424242;
     margin: auto;
-    margin-bottom: 30px;
+    margin-bottom: 1.8rem;
+    padding: 1.2rem;
 }
 .features__description {
     text-align: center;
     font-weight: bold;
     color: white;
-    font-size: 20px;
+    font-size: 1.2rem;
 }
