--- a/css/shared.css
+++ b/css/shared.css
@@ -4,10 +4,11 @@
     margin: 0;
 }
 h1,h2,h3 {
-    margin: 22px;
+    margin: 1.3rem;
 }
 body {
     font-family: 'Montserrat', sans-serif;
+    overflow-x: hidden;
 }
 ul {
     margin: 0;
@@ -18,21 +19,41 @@ ul li {
     margin: 0;
 }
 .header {
+    display: flex;
+    align-items: center;
     width: 100%;
     position: fixed;
     top: 0;
     left: 0;
     background-color: #2ddf5c;
-    padding: 8px 16px;
+    padding: .5rem 1rem;
+    z-index: 50;
 }
-.logo__brand {
-    text-decoration: none;
-    color: #0e4f1f;
-    font-weight: bold;
-    font-size: 18px;
+/** toggle button **/
+
+.toggle-button {
+    width: 3rem;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    margin-right: .5rem;
+    vertical-align: middle;
+}
+.toggle-button:focus {
+    outline: none;
+}
+.toggle-button__bar {
+    width: 100%;
+    height: 0.2rem;
+    background: #000;
+    display: block;
+    margin: 0.6rem 0;
 }
 .logo {
-    display: inline-block;
+    margin-right: auto;
+}
+.logo__brand img {
+    width: 2.5rem;
     vertical-align: middle;
 }
 .header-logo__title {
@@ -40,16 +61,14 @@ ul li {
     text-align: center;
 }
 .header-logo {
-    background: url("freedom.jpeg") no-repeat;
+    background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent), 
+    url("freedom.jpeg") no-repeat;
     background-size: cover;
-    width: 100%;
-    height: 817px;
+    width: 100vw;
+    height: 55vh;
 }
 .nav {
-    display: inline-block;
-    width: calc(100% - 70px);
-    text-align: right;
-    vertical-align: middle;
+    display: none;
 }
 .nav__list {
     list-style: none;
@@ -57,13 +76,12 @@ ul li {
 }
 .nav__items {
     display: inline-block;
-    margin: 0;
+    margin-left: 1.6rem;
     padding: 0;
 }
-.nav__links {
+.nav__links,
+.mobile-nav__item a {
     text-decoration: none;
-    padding: 10px 0;
-    margin: 0 10px;
     color: rgb(112, 106, 108);
     font-weight: bold;
 }
@@ -75,33 +93,115 @@ ul li {
 .nav__items--cta a {
     color: white;
     background: red;
-    padding: 8px 16px;
+    padding: .5rem 1rem;
     border-radius: 8px;
     transition: 0.3s;
 }
-.nav__items--cta a:hover {
+.nav__items--cta a:hover,
+.mobile-nav__item a:hover {
     color: red;
     background: white;
     border: none;
 }
 
-/** main styles **/
+/** mobile nav **/
 
+.mobile-nav {
+    display: none;
+    position: fixed;
+    z-index: 101;
+    top: 0;
+    left: 0;
+    background: white;
+    width: 40vw;
+    height: 100vh;
+  }
+  
+  .mobile-nav__items {
+    width: 90%;
+    height: 100%;
+    list-style: none;
+    margin: 10% auto;
+    padding: 0;
+    text-align: center;
+  }
+  
+  .mobile-nav__item {
+    margin: 1rem 0;
+  }
+  
+  /* .mobile-nav__item a {
+    font-size: 1.5rem;
+  } */
+/** backdrop styles **/
+.backdrop {
+    z-index: 100;
+    position: fixed;
+    display: none;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background: rgba(0,0,0, 0.5);
+}
+/** Modal styles **/
+
+.modal {
+    width: 25%;
+    position: fixed;
+    top: 20%;
+    display: none;
+    left: 35%;
+    background: #fff;
+    padding: 1rem;
+    z-index: 200;
+    border: 1px solid rgba(0,0,0, 0.5);
+}
+.modal__title {
+    text-align: center;
+    margin: 0 0 1rem 0;
+}
+.modal__actions {
+    text-align: center;
+}
+.modal__action {
+    text-decoration: none;
+    font-size: 1.2rem;
+    border: 1px solid #0e4f1f;
+    background: #0e4f1f;
+    font: inherit;
+    padding: .5rem 1rem;
+    margin: 0 0 1.5rem 1.5rem;
+    cursor: poiner;
+    color: white;
+}
+.modal__action:hover,
+.modal__action:action {
+    background: #2ddf5c;
+    border-color: #2ddf5c;
+}
+.modal__action--negative {
+    background: red;
+    border-color: red;
+}
+.modal__action--negative:hover,
+.modal__action--negative:active {
+    background: red;
+    border-color: red;
+}
 
 /** footer section **/
 .footer__nav {
     width: 100%;
 }
 .footer {
-    padding: 40px;
+    padding: 2.5rem;
     background: #000;
 }
 .footer__list {
     text-align: center;
-}
-.footer__item {
-    width: 30%;
-    display: inline-block;
+    display: flex;
+    justify-content: space-around;
 }
 .footer__link {
     color: white;
