--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+:root {
+    --light-green: #19b84c;
+}
+
+
 /** header *** */
 .header-logo .header-logo__title {
     text-align: left;
@@ -27,7 +32,7 @@
 }
 
 .plans__price-highlighted {
-    background: #19b84c;
+    background: var(light-green);
     color: white;
     /* box-shadow: 2px 2px 2px 2px rgba(0,0,0, 0.2); */
 }
@@ -35,7 +40,7 @@
     background: #fff;
     /* width: 50%;
     margin: 0 auto; */
-    color: #19b84c;
+    color: var(--light-green);
     padding: .5rem;
     /* box-shadow: 2px 2px 2px 2px rgba(0,0,0, 0.2); */
     border-radius: 10px;
